[package]
name = "sploosh"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30.5"
env_logger = "0.11.5"
wgpu = "23.0.1"
pollster = "0.4.0"
nalgebra = "0.33.2"
bytemuck = { version = "1.20.0", features = ["derive"] }
rand = "0.8.5"
egui = "0.30.0"
egui-wgpu = "0.30.0"
egui-winit = "0.30.0"
